--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,26 +6,18 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- Bootstrap 3.1.1 -->
-    <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
     <!--[if lte IE 7]>
-    <title ng-bind-template="{{pageTitle}}"></title>
-    <link rel="stylesheet" href="/css/app.css"><!--[if lte IE 7]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script><![endif]--><!--[if lte IE 8]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <script src="/js/vendor.js"></script>
-    <script src="/js/app.js"></script>
   </head>
-  <body ng-app="myApp">
-
-    <ul class="menu">
-      <li><a href="#/view1">view1</a></li>
-      <li><a href="#/view2">view2</a></li>
-    </ul>
+  <body ng-app="engageApp">
 
     <div ng-view></div>
 
-    <div>Angular seed app: Hello World!<span app-version></span></div>
+    <script src="/js/vendor.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
